[tool.poetry]
name = "streamlet-base-replit"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Quiroga <juanpquiroga@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlet_base_replit"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7"
streamlit = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true