[tool.poetry]
name = "streamlet-base-replit"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Quiroga <juanpquiroga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.8,<3.10"
streamlit = "^1.21.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true